--- a/ansible/roles/test.dalibo.apache/defaults/main.yml
+++ b/ansible/roles/test.dalibo.apache/defaults/main.yml
@@ -1,2 +1,14 @@
----
-# defaults file for test.dalibo.apache
+apache_listen_ip: "*"
+apache_listen_port: 80
+apache_listen_port_ssl: 443
+apache_remove_default_vhost: false
+apache_ignore_missing_ssl_certificate: true
+apache_ssl_no_log: true
+apache_ssl_protocol: "All -SSLv2 -SSLv3"
+apache_ssl_cipher_suite: "AES256+EECDH:AES256+EDH"
+apache_mods_enabled:
+  - rewrite
+  - ssl
+apache_service: apache2
+apache_state: started
+apache_packages_state: present
