--- a/ansible/roles/test.dalibo.apache/tasks/main.yml
+++ b/ansible/roles/test.dalibo.apache/tasks/main.yml
@@ -1,2 +1,16 @@
----
-# tasks file for test.dalibo.apache
+- name: Install Apache2
+  ansible.builtin.apt:
+    update_cache: true
+    name:
+      - apache2
+    state: present
+#- name: Creating Apache Vhost
+#  ansible.builtin.template:
+#    src: {{ apache_vhost_file }}
+#    dest: {{ apache_vhost_path }}
+#    notify:
+#    - restart apache
+- name: Enable apache service
+  ansible.builtin.service:
+    name: apache2
+    enabled: true
