--- a/ansible/roles/test.dalibo.apache/tasks/main.yml
+++ b/ansible/roles/test.dalibo.apache/tasks/main.yml
@@ -4,12 +4,16 @@
     name:
       - apache2
     state: present
+# Copie du vhost du template vers la cible    
 #- name: Creating Apache Vhost
 #  ansible.builtin.template:
 #    src: {{ apache_vhost_file }}
 #    dest: {{ apache_vhost_path }}
-#    notify:
-#    - restart apache
+- name: Enable SSL mod for apache2
+  ansible.builtin.command: a2enmod ssl
+
+  notify:
+    - restart apache
 - name: Enable apache service
   ansible.builtin.service:
     name: apache2
