--- a/ansible/roles/test.dalibo.explain/defaults/main.yml
+++ b/ansible/roles/test.dalibo.explain/defaults/main.yml
@@ -1,2 +1,3 @@
 dalibo_explain_release_url: https://github.com/dalibo/explain.dalibo.com/archive/refs/tags/v2.10.0.tar.gz
-dalibo_explain_app_path: /opt/explain
+# Checksum ? 
+dalibo_explain_app_path: /var/www/explain
