--- a/ansible/roles/test.dalibo.explain/tasks/main.yml
+++ b/ansible/roles/test.dalibo.explain/tasks/main.yml
@@ -2,14 +2,21 @@
   ansible.builtin.file:
     path: '{{ dalibo_explain_app_path }}'
     state: directory
-    owner: root
-    group: root
+    owner: www-data
+    group: www-data
     mode: '0755'
 - name: Download and extract explain archive
   ansible.builtin.unarchive:
     src: '{{ dalibo_explain_release_url }}'
     dest: '{{ dalibo_explain_app_path }}'
     remote_src: true
-    owner: root
-    group: root
+    owner: www-data
+    group: www-data
+    mode: '0755'
+# Initialiser l'app avec les commandes pip
+# Copier le fichier de config (config.py) du template vers la cible
+- name: Configure explain app
+  ansible.builtin.template:
+    src: config.py.j2
+    dest: /var/www/explain/explain.dalibo.com-2.10.0/config.py
     mode: '0755'
