--- a/ansible/roles/test.dalibo.apache/tasks/main.yml
+++ b/ansible/roles/test.dalibo.apache/tasks/main.yml
@@ -4,17 +4,30 @@
     name:
       - apache2
     state: present
-# Copie du vhost du template vers la cible    
-#- name: Creating Apache Vhost
-#  ansible.builtin.template:
-#    src: {{ apache_vhost_file }}
-#    dest: {{ apache_vhost_path }}
-- name: Enable SSL mod for apache2
-  ansible.builtin.command: a2enmod ssl
-
-  notify:
-    - restart apache
 - name: Enable apache service
   ansible.builtin.service:
     name: apache2
     enabled: true
+- name: Enable modules
+  community.general.apache2_module:
+    name: "{{ item.module }}"
+    state: "{{ item.state }}"
+  loop:
+  - module: ssl
+    state: present
+  - module: rewrite
+    state: present
+  - module: proxy_http
+    state: present
+  notify:
+    - restart apache
+- name: Creating Apache Vhost
+  ansible.builtin.template:
+    src: explain.conf.j2
+    dest: /etc/apache2/sites-available/explain.conf
+    mode: '0644'
+  notify:
+    - syntax check
+    - enable site
+    - reload apache
+
